--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
             
-            <label for="email">E-mail:</label>
+            <label for="email">E-mai:</label>
             <input type="email" id="email" name="email" required>
             
             <label for="mensagem">Mensagem:</label>
